--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplebar/5.3.9/simplebar.min.css" />
 
   <title>Minimal UI Kit</title>
-  <meta name="description"
-    content="The starting point for your next project with Minimal UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style" />
-  <meta name="keywords" content="react,material,kit,application,dashboard,admin,template" />
-  <meta name="author" content="Minimal UI Kit" />
+  <meta name="Amit Solanki"
+    content="Frontend Engineer
+    Knowledgeable Front End Developer adept at creating successful websites. Proficient in HTML, CSS, JAVASCRIPT & ReactJS. I am a hard worker with fast learning capability and self motivated person." />
+  <meta name="keywords" content="react,material,kit,application,dashboard,admin,template,ecommerce," />
+  <meta name="author" content="Amit Solanki" />
 </head>
 
 <body>
